--- a/src/app/webroot/css/bibdhek.css
+++ b/src/app/webroot/css/bibdhek.css
@@ -161,6 +161,11 @@ table td.actions a {
 	padding:2px 5px;
 }
 
+.cart td th {
+	width: 90px;
+	text-align: right;
+}
+
 /* SQL log */
 .cake-sql-log {
 	background: #fff;
